# EmbarcaTech_UN4_Matriz

./: CMakeLists.txt  Projeto-matriz-contagem.c  Projeto-matriz-contagem.pio  README.md  diagram.json  pico_sdk_import.cmake  wokwi-project.txt  wokwi.toml
